fix missing color vars

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,5 +1,5 @@
 
-$black:#000;
+$black: #000;
 $offwhite: #f9f9f9;
 $gray: #ccc;
 $purple: #c776df;
@@ -13,7 +13,7 @@ $root-line-height: 1.7;
 $body-color: $gray;
 $body-bg: $black;
 
-$link-color: $red;
+$link-color: $swift-red;
 
 $border-color: #e5e5e5;
 
